<resources>
    <string name="app_name">Rock Paper Scissors Lizard Spock</string>
    <string name="make_selection">Make your choice</string>
    <string name="android_selection">Android chooses</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="lizard">Lizard</string>
    <string name="spock">Spock</string>
    <string name="winner">wins!</string>
    <string name="draw">It\'s a draw!</string>
    <string name="user">You</string>
    <string name="android">Android</string>
</resources>
